--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@
 
 /* БРОВИ */
 .brows-row {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 100vw;
@@ -87,6 +87,7 @@
   display: flex;
   align-items: center;
   z-index: 999;
+  overflow: hidden;
 }
 
 .brows-strip {
@@ -253,7 +254,7 @@
 }
 
 .center-left-panel {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 25vw;
   width: 25vw;
@@ -268,7 +269,7 @@
 .eye {
   width: 100%;
   height: 25vw;
-  border: 5px solid #000000;
+  border: 5px solid black;
   flex-shrink: 0;
   background-repeat: no-repeat;
   background-size: contain;
@@ -386,13 +387,12 @@
 
 /* РОТ И РУКИ */
 .mouth-row {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 30vw;
+  position: relative;
+  width: 100vw;
+  height: 28vw;
   z-index: 998;
   display: flex;
+  overflow: hidden;
 }
 
 /* ОБЩИЙ КОНТЕЙНЕР РУКИ */
@@ -647,3 +647,69 @@
 .final-large-box:hover .face {
   transform: rotate(360deg);
 }
+
+@media (max-width: 768px) {
+  .face-layer {
+    width: 100vw;
+  }
+
+  .ears-left, 
+  .center-left-panel {
+    width: 50vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .center-left-panel {
+    left: 25vw;
+  }
+
+  .ears-right,
+  .center-right-panel {
+    display: none;
+  }
+
+  /* РОТ И РУКИ: рот во всю ширину, руки под ним */
+  .mouth-row {
+    height: 56vw;
+    width: 100vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .mouth {
+    width: 100vw;
+  }
+
+  .left-hand {
+    position: absolute;
+    top: 28vw;
+    left: 0;
+    width: 50vw;
+  }
+
+  .right-hand {
+    position: absolute;
+    top: 28vw;
+    right: 0;
+    width: 50vw;
+  }
+
+  /* ОБВОДКА */
+  .brow,  
+  .ear, 
+  .top-bar,  
+  .bottom-bar,    
+  .nose,   
+  .mouth, 
+  .eye,
+  .left-hand,
+  .right-hand,
+  .wings,
+  .tails,
+  .horns,
+  .final-bar,
+  .final-large-box {border: 1px solid black;}
+
+}
+
